# mcut

./: .gitignore
tutorials/: CMakeLists.txt
tutorials/UnityPlugin/: CMakeLists.txt  MCutBindings.cpp  MCutBindings.h
unity-plugin/: McEnum.cs  Mesh.cs  MeshCutBindings.cs  MeshCutContext.cs  MeshCutQuery.cs  MeshCutTestWindow.cs  MeshCutting.asmdef  README.md  VisualizeBackFaces.shadergraph
